# GWLD

./: README.md
GGLD-C++/: CMakeLists.txt  Manual.md  README
GGLD-C++/include/: cmdline.h  filedeal.h  methods.h  utils.h
GGLD-C++/src/: filedeal.cpp  main.cpp  methods.cpp  utils.cpp
GGLD-R/: DESCRIPTION  NAMESPACE
GGLD-R/R/: GGLD.R  HeatMap.R  LD.R  MI.R  RMI.R  RcppExports.R  circos.R  circosdata.R  codegeno.R  filedeal.R  gwld-method.R  save.R  snp.R  utils.R
GGLD-R/data/: circos.rda  snp.rda
GGLD-R/man/: Circos_Data.Rd  GGLD.Rd  HeatMap.Rd  LD.Rd  LDsave.Rd  SNP_Data.Rd  bed2matrix.Rd  circos.legendlink.Rd  circos.snplink.Rd  recode.Rd  snpcircos.Rd  vcf2matrix.Rd
GGLD-R/src/: RcppExports.cpp  codeGenotype.cpp  filedeal.cpp  method.cpp
GWLD-C++/: CMakeLists.txt  Manual-cn.md  Manual-en.md  Manual.md  README
GWLD-C++/include/: cmdline.h  filedeal.h  methods.h  utils.h
GWLD-C++/src/: filedeal.cpp  main.cpp  methods.cpp  utils.cpp
GWLD-R/: DESCRIPTION  NAMESPACE
GWLD-R/R/: GWLD.R  HeatMap.R  LD.R  MI.R  RMI.R  RcppExports.R  calc_circos.R  calc_decay.R  circos_plot.R  codegeno.R  duck_data.R  filedeal.R  save.R  utils.R
GWLD-R/data/: duck.rda
GWLD-R/man/: GWLD.Rd  HeatMap.Rd  LD.Rd  MI.Rd  RMI.Rd  calc_circos.Rd  calc_decay.Rd  circos.legendlink.Rd  circos.linksnp.Rd  circos.snplink.Rd  codegeno.Rd  duck_data.Rd  ped2matrix.Rd  read.plink.Rd  read.vcf.Rd  save.Rd  snpcircos.Rd  stats_freq.Rd  vcf2matrix.Rd
GWLD-R/src/: RcppExports.cpp  (+3 more)
example/: example-2.map  example-2.ped  example-3.vcf  example.R  example.bed  example.bim  example.fam
